--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
 </main>
-  <section class="popup popup_opened">
+  <section class="popup">
     <div class="popup__overlay">
       <div class="popup__form">
         <button class="popup__close-button"><img src="./images/close-button.svg"></button>
