--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
   </section>
   <section class="places">
     <div class="place">
-      <img class="place__image" src="./images/karachaevsk.jpg">
+      <img class="place__image" src="./images/karachaevsk.jpg" alt="Фото пейзажей Карачаевска">
       <div class="place__description">
         <h2 class="place__title">Карачаевск</h2>
         <button class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
-      <img class="place__image" src="./images/elbrus.jpg">
+      <img class="place__image" src="./images/elbrus.jpg" alt="Фото пейзажей Эльбруса">
       <div class="place__description">
         <h2 class="place__title">Гора Эльбрус</h2>
         <button class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
-      <img class="place__image" src="./images/dombai.jpg">
+      <img class="place__image" src="./images/dombai.jpg" alt="Фото пейзажей Домбая">
       <div class="place__description">
         <h2 class="place__title">Домбай</h2>
         <button class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
-      <img class="place__image" src="./images/elbrus_2.jpg">
+      <img class="place__image" src="./images/elbrus_2.jpg" alt="Фото пейзажей Эльбруса">
       <div class="place__description">
         <h2 class="place__title">Гора Эльбрус</h2>
         <button class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
-      <img class="place__image" src="./images/dombai_2.jpg">
+      <img class="place__image" src="./images/dombai_2.jpg" alt="Фото пейзажей Домбая">
       <div class="place__description">
         <h2 class="place__title">Домбай</h2>
         <button class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
-      <img class="place__image" src="./images/karachaevo-ch.jpg">
+      <img class="place__image" src="./images/karachaevo-ch.jpg" alt="Фото пейзажей Карачаево-Черкессии">
       <div class="place__description">
         <h2 class="place__title">Карачаево-Черкессия</h2>
         <button class="place__like-button"></button>
@@ -77,7 +77,7 @@
   <section class="popup">
     <div class="popup__overlay">
       <div class="popup__form">
-        <button class="popup__close-button"><img src="./images/close-button.svg"></button>
+        <button class="popup__close-button"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="popup__field" type="text" name="name" value="Жак-Ив Кусто">
         <input class="popup__field" type="text" name="nickname" value="Исследователь океана">
