--- a/index.html
+++ b/index.html
@@ -10,63 +10,61 @@
 <body class="page">
 <header class="header">
   <img class="header__logo" src="./images/logo.svg" alt="Лого сайта">
-  <hr class="header__line">
+  <div class="header__line"></div>
 </header>
 <main>
   <section class="profile">
-    <div class="profile__avatar">
-      <img class="profile__img" src="./images/avatar.jpg" alt="Фото профиля">
-    </div>
+    <img class="profile__img" src="./images/avatar.jpg" alt="Фото профиля">
     <div class="profile__profile-info">
       <div>
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <p class="profile__paragraph">Исследователь океана</p>
       </div>
-      <button class="profile__edit-button"></button>
+      <button type="button" class="profile__edit-button"></button>
     </div>
-    <button class="profile__add-button"></button>
+    <button type="button" class="profile__add-button"></button>
   </section>
   <section class="places">
     <div class="place">
       <img class="place__image" src="./images/karachaevsk.jpg" alt="Фото пейзажей Карачаевска">
       <div class="place__description">
         <h2 class="place__title">Карачаевск</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
       <img class="place__image" src="./images/elbrus.jpg" alt="Фото пейзажей Эльбруса">
       <div class="place__description">
         <h2 class="place__title">Гора Эльбрус</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
       <img class="place__image" src="./images/dombai.jpg" alt="Фото пейзажей Домбая">
       <div class="place__description">
         <h2 class="place__title">Домбай</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
       <img class="place__image" src="./images/elbrus_2.jpg" alt="Фото пейзажей Эльбруса">
       <div class="place__description">
         <h2 class="place__title">Гора Эльбрус</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
       <img class="place__image" src="./images/dombai_2.jpg" alt="Фото пейзажей Домбая">
       <div class="place__description">
         <h2 class="place__title">Домбай</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
     <div class="place">
       <img class="place__image" src="./images/karachaevo-ch.jpg" alt="Фото пейзажей Карачаево-Черкессии">
       <div class="place__description">
         <h2 class="place__title">Карачаево-Черкессия</h2>
-        <button class="place__like-button"></button>
+        <button type="button" class="place__like-button"></button>
       </div>
     </div>
   </section>
@@ -76,13 +74,13 @@
 </main>
   <section class="popup">
     <div class="popup__overlay">
-      <div class="popup__form">
-        <button class="popup__close-button"></button>
+      <button type="button" class="popup__close-button"></button>
+      <form class="popup__form">
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="popup__field" type="text" name="name" value="Жак-Ив Кусто">
         <input class="popup__field" type="text" name="nickname" value="Исследователь океана">
-        <button class="popup__submit-button">Сохранить</button>
-      </div>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
+      </form>
     </div>
   </section>
 </body>
