header and form fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body class="page">
 <header class="header">
   <img class="header__logo" src="./images/logo.svg" alt="Лого сайта">
-  <div class="header__line"></div>
 </header>
 <main>
   <section class="profile">
@@ -75,7 +74,7 @@
   <section class="popup">
     <div class="popup__overlay">
       <button type="button" class="popup__close-button"></button>
-      <form class="popup__form">
+      <form name="edit-profile-form" class="popup__form">
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="popup__field" type="text" name="name" value="Жак-Ив Кусто">
         <input class="popup__field" type="text" name="nickname" value="Исследователь океана">
