profile popups appearing correctly

--- a/index.html
+++ b/index.html
@@ -71,16 +71,28 @@
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
 </main>
-  <section class="popup">
+  <section class="popup popup_type_edit-profile">
     <div class="popup__overlay">
       <button type="button" class="popup__close-button"></button>
       <form name="edit-profile-form" class="popup__form">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input class="popup__field" type="text" name="name" value="Жак-Ив Кусто">
-        <input class="popup__field" type="text" name="nickname" value="Исследователь океана">
+        <input class="popup__field" type="text" name="name">
+        <input class="popup__field" type="text" name="nickname">
         <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
     </div>
   </section>
+  <section class="popup popup_type_add-place">
+    <div class="popup__overlay">
+      <button type="button" class="popup__close-button"></button>
+      <form name="add-place-form" class="popup__form">
+        <h3 class="popup__title">Новое место</h3>
+        <input class="popup__field" type="text" name="place-title">
+        <input class="popup__field" type="text" name="image-url">
+        <button type="submit" class="popup__submit-button">Создать</button>
+      </form>
+    </div>
+  </section>
+  <script src="./script.js"></script>
 </body>
 </html>
