like and delete buttons working

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <h2 class="place__title"></h2>
         <button type="button" class="place__like-button"></button>
       </div>
+      <button class="place__delete-button"></button>
     </div>
   </template>
   <script src="./script.js"></script>
