card popup is working

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
       <button class="place__delete-button"></button>
     </div>
   </template>
+  <template class="popup__place-template">
+    <section class="popup popup_type_place">
+      <div class="popup__overlay popup__overlay_column">
+        <div class="popup__container">
+          <button type="button" class="popup__close-button popup__close-button_card"></button>
+          <img class="popup__img">
+          <p class="popup__subtitle"></p>
+        </div>
+      </div>
+    </section>
+  </template>
   <script src="./script.js"></script>
 </body>
 </html>
