fix: изм.обл.вид.Слуш.delCard

--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,14 @@
           name="delete-card-form"
           novalidate
         >
-          <h3 class="popup__title popup__title_type_confirm-delete">Вы уверены?</h3>
-          <button type="submit" class="popup__submit-button popup__submit-button_type_confirm-delete" value="Да">
+          <h3 class="popup__title popup__title_type_confirm-delete">
+            Вы уверены?
+          </h3>
+          <button
+            type="submit"
+            class="popup__submit-button popup__submit-button_type_confirm-delete"
+            value="Да"
+          >
             Да
           </button>
         </form>
@@ -171,7 +177,7 @@
       </div>
     </section>
 
-    <template class="place-template">
+    <template id="card-template">
       <div class="place">
         <img class="place__image" />
         <div class="place__description">
